Terraform/aws/02-networking/internet_gateway.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name        = "main-internet-gateway"
    Environment = var.environment
    ManagedBy   = "Terraform"
  }
}
