Terraform/aws/02-networking/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = var.vpc_cidr

  tags = {
    Name        = "Terraform-lan-vpc"
    Environment = var.environment
    ManagedBy   = "Terraform"
  }
}
